<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <GridLayout
        android:id="@+id/topTen_LAY_scoreboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:columnCount="6"
        android:orientation="horizontal"
        android:rowCount="6">

        <TextView
            style="@style/leaderboardNumbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"

            android:layout_column="0"
            android:text="@string/_1" />

        <TextView
            style="@style/leaderboardNumbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/_2"

            />

        <TextView
            style="@style/leaderboardNumbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"

            android:layout_column="0"
            android:text="@string/_3" />

        <TextView
            style="@style/leaderboardNumbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:text="@string/_4"

            />

        <TextView
            style="@style/leaderboardNumbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="0"
            android:text="@string/_5"

            />

        <TextView
            style="@style/leaderboardNumbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="3"
            android:text="@string/_6"

            />

        <TextView
            style="@style/leaderboardNumbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="3"
            android:text="@string/_7"

            />

        <TextView
            style="@style/leaderboardNumbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="3"
            android:text="@string/_8"

            />

        <TextView
            style="@style/leaderboardNumbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="3"
            android:text="@string/_9"

            />

        <TextView
            style="@style/leaderboardNumbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="3"
            android:text="@string/_10"

            />

        <TextView
            style="@style/leaderboardText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"

            android:layout_column="1"
            android:minEms="5"


            android:text="@string/name" />

        <TextView
            style="@style/leaderboardText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:minEms="5"
            android:text="@string/name" />


        <TextView
            style="@style/leaderboardText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"

            android:layout_column="1"
            android:minEms="5"


            android:text="@string/name" />

        <TextView
            style="@style/leaderboardText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:minEms="5"


            android:text="@string/name" />


        <TextView
            style="@style/leaderboardText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="1"
            android:minEms="5"
            android:text="@string/name" />


        <TextView
            style="@style/leaderboardText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="4"
            android:minEms="5"

            android:text="@string/name" />


        <TextView
            style="@style/leaderboardText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="4"
            android:minEms="5"

            android:text="@string/name" />


        <TextView
            style="@style/leaderboardText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="4"
            android:minEms="5"

            android:text="@string/name" />


        <TextView
            style="@style/leaderboardText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="4"
            android:minEms="5"

            android:text="@string/name" />


        <TextView
            style="@style/leaderboardText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="4"
            android:minEms="5"

            android:text="@string/name" />


        <TextView
            style="@style/leaderboardsScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_gravity="center"
            android:layout_column="2"

            android:text="@string/_26" />

        <TextView
            style="@style/leaderboardsScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_gravity="center"

            android:text="@string/_26" />


        <TextView
            style="@style/leaderboardsScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_gravity="center"

            android:layout_column="2"
            android:text="@string/_26" />

        <TextView
            style="@style/leaderboardsScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_gravity="center"

            android:text="@string/_26" />


        <TextView
            style="@style/leaderboardsScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="2"
            android:layout_gravity="center"

            android:text="@string/_26" />


        <TextView
            style="@style/leaderboardsScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="5"
            android:layout_gravity="center"

            android:text="@string/_26" />


        <TextView
            style="@style/leaderboardsScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="5"
            android:layout_gravity="center"

            android:text="@string/_26" />


        <TextView
            style="@style/leaderboardsScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="5"
            android:layout_gravity="center"

            android:text="@string/_26" />


        <TextView
            style="@style/leaderboardsScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="5"
            android:layout_gravity="center"

            android:text="@string/_26" />


        <TextView
            style="@style/leaderboardsScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="5"
            android:layout_gravity="center"

            android:text="@string/_26" />

        <TextView
            style="@style/leaderboardsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="center"

            android:text="@string/name_title" />

        <TextView
            style="@style/leaderboardsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_gravity="center"

            android:text="@string/score_title" />

        <TextView
            style="@style/leaderboardsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="4"
            android:layout_gravity="center"

            android:text="@string/name_title" />

        <TextView
            style="@style/leaderboardsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="5"
            android:layout_gravity="center"

            android:text="@string/score_title" />


    </GridLayout>

</RelativeLayout>