<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="@drawable/ic_large_triangles"
    >

    <TextView
        android:id="@+id/settings_LBL_title"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"

        android:text="@string/settings"
        android:textSize="60sp"
        android:textStyle="bold"
        />

    <ImageButton
        android:id="@+id/settings_BTN_p1Avatar"

        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/settings_LBL_title"
        android:layout_marginTop="20dp"
        android:layout_marginStart="100dp"

        />

    <EditText
        android:id="@+id/settings_TXT_p1Name"

        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_toEndOf="@+id/settings_BTN_p1Avatar"
        android:layout_below="@+id/settings_LBL_title"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"

        android:inputType="text"
        android:hint="@string/player_1_name"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:background="@color/white"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:maxLength="7"

        />

    <ImageButton
        android:id="@+id/settings_BTN_p2Avatar"

        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/settings_BTN_p1Avatar"
        android:layout_marginTop="20dp"
        android:layout_marginStart="100dp"

        />

    <EditText
        android:id="@+id/settings_TXT_p2Name"

        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_toEndOf="@+id/settings_BTN_p2Avatar"
        android:layout_below="@+id/settings_TXT_p1Name"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"

        android:gravity="center"
        android:inputType="text"
        android:hint="@string/player_2_name"
        android:background="@color/white"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:maxLength="7"
        />

    <Button
        android:id="@+id/settings_BTN_return"

        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="10dp"

        android:text="@string/return_button"
        android:backgroundTint="@color/white"
        android:textAllCaps="false"
        android:textSize="20sp"


        />



</RelativeLayout>